--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+table {
+  width: 300px; 
+  margin: 20px auto; 
+  border-collapse: collapse; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+caption {
+  font-size: 1.5em; 
+  margin-bottom: 10px; 
+  color: #333; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+td {
+  width: 100px; 
+  height: 100px;
+  text-align: center; 
+  vertical-align: middle; 
+  cursor: pointer; 
+  background-color: #f0f0f0; 
+  border: 2px solid #ccc; 
+  transition: background-color 0.3s, transform 0.1s; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+td:hover {
+  background-color: #4cb3d2; 
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  width: 100%; 
+  height: 100%; 
+  font-size: 2em; 
+  border: none; 
+  background-color: transparent; 
+  cursor: pointer; 
+}
+#tic{
+  width: 50%;
+  margin-left: 370px;
+  height: 100%; 
+  font-size: 2em; 
+  border: none; 
+  background-color: transparent; 
+  cursor: pointer; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+button.x {
+  color: #ff5722; 
 }
+
+button.o {
+  color: #2196f3; 
+}
+
+button:focus {
+  outline: none; 
+}
+
+button:active {
+  background-color: #d0d0d0; 
+}
+.winner {
+  background-color: #76ff03; 
+  border: 2px solid #388e3c; 
+}
+
